# TI_IWR6843AOP

./: .gitignore  README.md
docker/: Dockerfile  docker-compose.yml  ros_entrypoint.sh
map/: mmwave.bt
ros2_rviz_docker/: README.md
ros2_rviz_docker/humble_docker/: Dockerfile  build.sh  clc_container.sh  ros_entrypoint.sh  rviz_remote.sh
ros2_rviz_docker/robot_rviz/: cartographer_2d.rviz  mmwave_sensor_test.rviz  navigate.rviz  octomap.rviz  slam.rviz
src/object_detection/: CMakeLists.txt  package.xml
src/object_detection/example/: dbscan.cpp  filter_multi_frames.cpp  filter_single_frame.cpp  test_icp.cpp
src/object_detection/include/object_detection/cluster/: dbscan.hpp  eu_cluster_extractor.hpp
src/object_detection/include/object_detection/common/: PointTI.h  boundingbox.hpp  param.h
src/object_detection/include/object_detection/filter/: box_filter.hpp  difference_of_normals_filter.hpp  passthrough_filter.hpp  radius_outlier_removal.hpp  statistical_outlier_removal.hpp  voxelgrid.hpp
src/object_detection/include/object_detection/registration/: icp.hpp
src/object_detection/launch/: 3d_tracking.launch.py  dbscan_cluster.launch.py  dbscan_cluster_map.launch.py  filter_for_ti_dynamic.launch.py  filter_for_ti_static.launch.py
src/object_detection/map/: velodyne.pcd
src/object_detection/rviz/: 3d_tracking.rviz  mmwave_multi_frames.rviz  mmwave_multi_frames_dbscan.rviz  mmwave_single_frame.rviz  mmwave_single_frame_dbscan.rviz
src/ti_ros2_driver/: package.xml  setup.cfg  setup.py
src/ti_ros2_driver/cfg/: 3d_tracking_high_detection.cfg  3d_tracking_indoor.cfg  3d_tracking_low_noise.cfg  RADheatmap.cfg  base.cfg  rules.txt  staticRetention.cfg
src/ti_ros2_driver/debug/: result.json
src/ti_ros2_driver/launch/: 6843aop_3d_0.launch.py  6843aop_3d_1.launch.py  6843aop_3d_tracking.launch.py  6843aop_base.launch.py
src/ti_ros2_driver/ti_ros2_driver/: TI.py  benchmark.py  pc_publisher.py  plotheatmap.py
ti_test_py/: package.xml  setup.cfg  setup.py
ti_test_py/img/benchmark/: thread_tracing.json
ti_test_py/launch/: 6843aop_3d_0.launch.py  6843aop_3d_1.launch.py
ti_test_py/ti_test_py/: TI.py  benchmark.py  pc_publisher.py  visualize.py
